<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyBakingApp</string>
    <string name="application_name">MyBakingApplication</string>
    <string name="recipe_pic">Here show recipe pictures</string>
    <string name="recipe_desc">recipe_desc</string>

    <!-- Empty recipe Database -->
    <string name="empty_recipe_list">No Recipe Information Available</string>
    <string name="empty_recipe_list_not_found">404 Not Found 无法找到指定位置的资源</string>
    <string name="empty_recipe_list_no_network">网络没有链接，请检查是否打开WiFi获知数据网络后再试.</string>
    <string name="empty_recipe_list_server_error">500 服务器遇到了意料不到的情况，不能完成客户的请求</string>
    <string name="empty_recipe_list_forbidden">403 Forbidden 鉴权没有通过，资源不可用</string>
    <string name="empty_recipe_list_timeout">408 Request Timeout, 服务器在规定的时间内没有响应</string>
    <string name="empty_recipe_list_unknown">服务器不知道发生什么原因，不可获知的原因</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="previous"> Previous </string>
    <string name="next"> Next </string>

    <!-- Exoplayer string list -->
    <string name="retry">Retry</string>
    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>

    <!-- widget -->
    <string name="appwidget_text">MyBaking Back Home</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">wolfgao.example.com</string>
    <string name="content_authority">com.example.wolfgao.mybakingapp</string>
    <string name="pref_server_status_key">server-status</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="textview">Name</string>
    <string name="widget_recipe_id">ID</string>
    <string name="widget_recipe_name">Recipe ID and Name</string>
    <string name="empty_records_view">Empty Records</string>
    <string name="mybaking_string_appwidget_text">MyBaking @string/appwidget_text</string>
    <string name="Prev">Prev</string>
    <string name="Next">Next</string>
    <string name="you_can_chang_widget_title_here">You can chang widget title here</string>
    <string name="change_title">Change Title:</string>
    <string name="select_recipe_hint">Please select the recipe you want to display:</string>
    <string name="button_save">保 存</string>
    <string name="button_cancel">取 消</string>


</resources>
